hphp/hack/test/typecheck/nullable_compare.php.exp
File "nullable_compare.php", line 8, characters 10-22:
This comparison has invalid types.  Only comparisons in which both arguments are strings, nums, DateTime, or DateTimeImmutable are allowed (Typing[4240])
File "nullable_compare.php", line 7, characters 15-17:
This is an int
File "nullable_compare.php", line 8, characters 19-22:
This is null
